Atualizar o inventario.html

--- a/inventario.html
+++ b/inventario.html
@@ -596,6 +596,15 @@
             Clique em cada categoria para ver os slots.
           </div>
         </div>
+<!-- Dentro da .left-panel, depois da .pane-inventory -->
+<div class="inventory-filter" style="display:none;">
+  <button class="filter-btn active" data-filter="all">Tudo</button>
+  <button class="filter-btn" data-filter="anime">Animes</button>
+  <button class="filter-btn" data-filter="manga">Mangás</button>
+  <button class="filter-btn" data-filter="ebook">eBooks</button>
+  <button class="filter-btn" data-filter="mentor">Mentorias</button>
+  <button class="filter-btn" data-filter="extras">Extras</button>
+</div>
 
         <div class="pane-equipment">
           <div class="left-title">Equipamento</div>
