--- a/inventario.html
+++ b/inventario.html
@@ -496,9 +496,20 @@
     height: 32px !important;
   }
 }
+.particle-bg-canvas {
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: -1; /* sempre atrás de todo conteúdo */
+  width: 100vw;
+  height: 100vh;
+  pointer-events: none;
+  opacity: 0.6; /* ajuste de intensidade */
+}
   </style>
 </head>
 <body>
+<canvas id="particle-bg" class="particle-bg-canvas"></canvas>
   <div class="ui-root">
     <div
  <!-- Abas principais -->
@@ -923,6 +934,51 @@
     const init = document.querySelector(".tab.active");
     if (init) handleTabClick(init);
   });
+<script>
+  const canvas = document.getElementById("particle-bg");
+  const ctx = canvas.getContext("2d");
+
+  let particles = [];
+
+  function resizeCanvas() {
+    canvas.width = window.innerWidth;
+    canvas.height = window.innerHeight;
+  }
+  window.addEventListener("resize", resizeCanvas);
+  resizeCanvas();
+
+  function createParticles() {
+    const total = 60;
+    particles = Array.from({ length: total }, () => ({
+      x: Math.random() * canvas.width,
+      y: Math.random() * canvas.height,
+      r: Math.random() * 1.5 + 0.5,
+      dx: (Math.random() - 0.5) * 0.3,
+      dy: (Math.random() - 0.5) * 0.3,
+      alpha: Math.random() * 0.5 + 0.3
+    }));
+  }
+
+  function animateParticles() {
+    ctx.clearRect(0, 0, canvas.width, canvas.height);
+    for (let p of particles) {
+      p.x += p.dx;
+      p.y += p.dy;
+
+      if (p.x < 0 || p.x > canvas.width) p.dx *= -1;
+      if (p.y < 0 || p.y > canvas.height) p.dy *= -1;
+
+      ctx.beginPath();
+      ctx.arc(p.x, p.y, p.r, 0, 2 * Math.PI);
+      ctx.fillStyle = `rgba(168, 85, 247, ${p.alpha})`;
+      ctx.fill();
+    }
+    requestAnimationFrame(animateParticles);
+  }
+
+  createParticles();
+  animateParticles();
+</script>
 </script>
 </body>
 </html>
