Atualizar o inventario.html

--- a/inventario.html
+++ b/inventario.html
@@ -511,16 +511,17 @@
 <body>
 <canvas id="particle-bg" class="particle-bg-canvas"></canvas>
   <div class="ui-root">
-    <div
- <!-- Abas principais -->
-<div class="tabs-container scroll-x">
-  <button class="tab active" data-tab="overview">Overview</button>
-  <button class="tab"       data-tab="inventory">Inventário</button>
-  <button class="tab"       data-tab="equipment">Equipamento</button>
-</div>
-<div class="store-row">
-  <button class="tab-store" onclick="location.href='store.html'">⛩ Loja</button>
-</div>
+  <div class="tabs-container-wrapper">
+    <!-- Abas principais -->
+    <div class="tabs-container scroll-x">
+      <button class="tab active" data-tab="overview">Overview</button>
+      <button class="tab" data-tab="inventory">Inventário</button>
+      <button class="tab" data-tab="equipment">Equipamento</button>
+    </div>
+    <div class="store-row">
+      <button class="tab-store" onclick="location.href='store.html'">⛩ Loja</button>
+    </div>
+  </div>
       </div>
     </div>
 
