Atualizar o inventario.html

--- a/inventario.html
+++ b/inventario.html
@@ -679,6 +679,10 @@
                             <button class="filter-btn" data-filter="materials">Materiais</button>
                             <button class="filter-btn" data-filter="quests">Missão</button>
                             <button class="filter-btn" data-filter="misc">Diversos</button>
+<button class="filter-btn" data-filter="animes">Animes</button>
+    <button class="filter-btn" data-filter="mangas">Mangás</button>
+    <button class="filter-btn" data-filter="ebooks">eBooks</button>
+    <button class="filter-btn" data-filter="mentorias">Mentorias</button>
                         </div>
                         <div class="category-container" data-category="consumables">
                             <h3 class="category-title">Consumíveis</h3>
@@ -710,7 +714,41 @@
                             <div class="inv-empty-label">Nada por aqui...</div>
                         </div>
                     </div>
+<!-- Animes -->
+<div class="category-container" data-category="animes" style="display: none;">
+    <h3 class="category-title">Animes</h3>
+    <div class="inv-grid">
+        <div class="inv-slot"></div>
+    </div>
+    <div class="inv-empty-label">Nenhum anime disponível.</div>
+</div>
 
+<!-- Mangás -->
+<div class="category-container" data-category="mangas" style="display: none;">
+    <h3 class="category-title">Mangás</h3>
+    <div class="inv-grid">
+        <div class="inv-slot"></div>
+    </div>
+    <div class="inv-empty-label">Nenhum mangá na coleção.</div>
+</div>
+
+<!-- eBooks -->
+<div class="category-container" data-category="ebooks" style="display: none;">
+    <h3 class="category-title">eBooks</h3>
+    <div class="inv-grid">
+        <div class="inv-slot"></div>
+    </div>
+    <div class="inv-empty-label">Nenhum eBook encontrado.</div>
+</div>
+
+<!-- Mentorias -->
+<div class="category-container" data-category="mentorias" style="display: none;">
+    <h3 class="category-title">Mentorias</h3>
+    <div class="inv-grid">
+        <div class="inv-slot"></div>
+    </div>
+    <div class="inv-empty-label">Sem mentorias ativas.</div>
+</div>
                     <div class="pane-equipment" style="display: none;">
                         <h2 class="panel-title">Habilidades Ativas</h2>
                         <div class="equip-section">
