Atualizar o inventario.html

--- a/inventario.html
+++ b/inventario.html
@@ -716,38 +716,30 @@
                     </div>
 <!-- Animes -->
 <div class="category-container" data-category="animes" style="display: none;">
-    <h3 class="category-title">Animes</h3>
-    <div class="inv-grid">
-        <div class="inv-slot"></div>
-    </div>
-    <div class="inv-empty-label">Nenhum anime disponível.</div>
+  <h3 class="category-title">Animes</h3>
+  <div class="inv-grid"><div class="inv-slot"></div></div>
+  <div class="inv-empty-label">Nenhum anime disponível.</div>
 </div>
 
 <!-- Mangás -->
 <div class="category-container" data-category="mangas" style="display: none;">
-    <h3 class="category-title">Mangás</h3>
-    <div class="inv-grid">
-        <div class="inv-slot"></div>
-    </div>
-    <div class="inv-empty-label">Nenhum mangá na coleção.</div>
+  <h3 class="category-title">Mangás</h3>
+  <div class="inv-grid"><div class="inv-slot"></div></div>
+  <div class="inv-empty-label">Nenhum mangá na coleção.</div>
 </div>
 
 <!-- eBooks -->
 <div class="category-container" data-category="ebooks" style="display: none;">
-    <h3 class="category-title">eBooks</h3>
-    <div class="inv-grid">
-        <div class="inv-slot"></div>
-    </div>
-    <div class="inv-empty-label">Nenhum eBook encontrado.</div>
+  <h3 class="category-title">eBooks</h3>
+  <div class="inv-grid"><div class="inv-slot"></div></div>
+  <div class="inv-empty-label">Nenhum eBook encontrado.</div>
 </div>
 
 <!-- Mentorias -->
 <div class="category-container" data-category="mentorias" style="display: none;">
-    <h3 class="category-title">Mentorias</h3>
-    <div class="inv-grid">
-        <div class="inv-slot"></div>
-    </div>
-    <div class="inv-empty-label">Sem mentorias ativas.</div>
+  <h3 class="category-title">Mentorias</h3>
+  <div class="inv-grid"><div class="inv-slot"></div></div>
+  <div class="inv-empty-label">Sem mentorias ativas.</div>
 </div>
                     <div class="pane-equipment" style="display: none;">
                         <h2 class="panel-title">Habilidades Ativas</h2>
