--- a/inventario.html
+++ b/inventario.html
@@ -28,6 +28,8 @@
             --glow-color: rgba(194, 149, 70, 0.5); /* Brilho sutil dourado */
             --shadow-color: rgba(0, 0, 0, 0.6); /* Sombra escura */
             --dirty-metal: #555;
+            --accent-gold: #c29546;
+            --accent-gold-rgb: 194, 149, 70;
         }
 
         /* --- Reset Básico e Body --- */
@@ -123,7 +125,7 @@
 
         .hud-currency {
             font-size: 0.9em;
-            color: var(--accent-gold);
+            color: var(--accent-gold-rgb);
             font-weight: bold;
             display: flex;
             align-items: center;
@@ -160,9 +162,9 @@
             box-shadow: 0 0 5px var(--shadow-color);
         }
         .hud-action-buttons button:hover {
-            background: var(--accent-gold);
+            background: var(--accent-gold-rgb);
             color: #fff;
-            border-color: var(--accent-gold);
+            border-color: var(--accent-gold-rgb);
             box-shadow: 0 0 10px var(--glow-color);
         }
 
@@ -229,13 +231,13 @@
         .tab.active {
             background: var(--accent-gold);
             color: var(--dark-bg);
-            border-color: var(--accent-gold);
+            border-color: var(--accent-gold-rgb);
             box-shadow: 0 0 15px var(--glow-color);
         }
         .tab:hover:not(.active) {
-            background: rgba(var(--accent-gold), 0.2);
+            background: rgba(var(--accent-gold-rgb), 0.2);
             color: var(--accent-gold);
-            border-color: var(--accent-gold);
+            border-color: var(--accent-gold-rgb);
         }
 
         /* --- Layout dos Painéis Internos --- */
@@ -278,7 +280,7 @@
             width: 200px; /* Tamanho base */
             height: 280px;
             background: linear-gradient(145deg, #2a2a2a, #1a1a1a);
-            border: 3px dashed var(--accent-gold);
+            border: 3px dashed var(--accent-gold-rgb);
             border-radius: 10px;
             display: flex;
             align-items: center;
@@ -327,7 +329,7 @@
         }
         .equip-slot:hover, .inv-slot:hover {
             opacity: 1;
-            border-color: var(--accent-gold);
+            border-color: var(--accent-gold-rgb);
             box-shadow: 0 0 12px var(--glow-color), inset 0 0 8px rgba(255, 255, 255, 0.1);
         }
         .item-count {
@@ -363,8 +365,8 @@
         }
         .edit-button, .add-point {
             background: var(--panel-border);
-            border: 1px solid var(--accent-gold);
-            color: var(--accent-gold);
+            border: 1px solid var(--accent-gold-rgb);
+            color: var(--accent-gold-rgb);
             border-radius: 4px;
             padding: 2px 6px;
             margin-left: 8px;
@@ -374,7 +376,7 @@
             font-family: "Share Tech Mono", monospace;
         }
         .edit-button:hover, .add-point:hover {
-            background: var(--accent-gold);
+            background: var(--accent-gold-rgb);
             color: var(--dark-bg);
             box-shadow: 0 0 8px var(--glow-color);
         }
@@ -421,15 +423,15 @@
             text-transform: uppercase;
         }
         .filter-btn.active {
-            background: var(--accent-gold);
+            background: var(--accent-gold-rgb);
             color: var(--dark-bg);
-            border-color: var(--accent-gold);
+            border-color: var(--accent-gold-rgb);
             box-shadow: 0 0 10px var(--glow-color);
         }
         .filter-btn:hover:not(.active) {
-            background: rgba(var(--accent-gold), 0.2);
-            border-color: var(--accent-gold);
-            color: var(--accent-gold);
+            background: rgba(var(--accent-gold-rgb), 0.2);
+            border-color: var(--accent-gold-rgb);
+            color: var(--accent-gold-rgb);
         }
 
         .category-container {
@@ -438,7 +440,7 @@
         .category-title {
             font-family: "Cinzel Decorative", serif;
             font-size: 1.2em;
-            color: var(--accent-gold);
+            color: var(--accent-gold-rgb);
             margin-bottom: 10px;
             border-bottom: 1px dotted var(--panel-border);
             padding-bottom: 5px;
@@ -467,7 +469,7 @@
         .equip-section-title {
             font-family: "Cinzel Decorative", serif;
             font-size: 1.1em;
-            color: var(--accent-gold);
+            color: var(--accent-gold-rgb);
             margin-bottom: 10px;
             border-bottom: 1px dotted var(--panel-border);
             padding-bottom: 5px;
@@ -500,7 +502,7 @@
             border: 1px solid #333;
         }
         ::-webkit-scrollbar-thumb:hover {
-            background: var(--accent-gold); /* Detalhe dourado no hover */
+            background: var(--accent-gold-rgb); /* Detalhe dourado no hover */
         }
 
         /* --- Responsividade --- */
