Atualizar o inventario.html

--- a/inventario.html
+++ b/inventario.html
@@ -709,13 +709,13 @@
                             <div class="inv-empty-label">Nenhum item de missão ativa.</div>
                         </div>
                          <div class="category-container" data-category="misc" style="display: none;">
-                            <h3 class="category-title">Diversos</h3>
-                            <div class="inv-grid">
-                                <div class="inv-slot"></div>
-                            </div>
-                            <div class="inv-empty-label">Nada por aqui...</div>
-                        </div>
-                    </div>
+  <h3 class="category-title">Diversos</h3>
+  <div class="inv-grid">
+    <div class="inv-slot"></div>
+  </div>
+  <div class="inv-empty-label">Nada por aqui...</div>
+</div>
+
 <!-- Animes -->
 <div class="category-container" data-category="animes" style="display: none;">
   <h3 class="category-title">Animes</h3>
@@ -743,6 +743,9 @@
   <div class="inv-grid"><div class="inv-slot"></div></div>
   <div class="inv-empty-label">Sem mentorias ativas.</div>
 </div>
+
+</div> <!-- FIM do bloco .pane-inventory -->
+
                     <div class="pane-equipment" style="display: none;">
                         <h2 class="panel-title">Habilidades Ativas</h2>
                         <div class="equip-section">
